--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-   "name": "gifted-md",
+   "name": "joel-md",
    "version": "2.5.0",
-   "description": "Multi device whatsapp bot by GiftedTech.",
+   "description": "Multi device whatsapp bot by joelTech.",
    "main": "lib/smd.js",
    "type": "commonjs",  
    "scripts": {
@@ -10,7 +10,7 @@
             "stop": "pm2 stop Gifted",
             "heroku-postbuild": "git clone https://github.com/mouricedevs/gifted-md.git temp1 && mv temp1/.git .git && rm -rf temp1"
    },
-   "author": "GiftedTech",
+   "author": "joelTech",
    "license" :"Apache-2.0",
    "dependencies": { 
              "@adiwajshing/keyed-db": "^0.2.4",
